Fare Card List Boostrap responsive table (static).

--- a/src/template/scss/_components.scss
+++ b/src/template/scss/_components.scss
@@ -1,7 +1,8 @@
+@import "accordions";
 @import "buttons";
 @import "button-groups";
 @import "cards";
 @import "card-deck";
 @import "forms";
-@import "accordions";
+@import "tables";
 @import "tooltips";
