--- a/src/template/css/app.css
+++ b/src/template/css/app.css
@@ -8453,9 +8453,15 @@ input[name="quantity"]::placeholder {
 
 table#myFareCardList thead th:nth-of-type(3) {
   min-width: 120px !important; }
+  @media (min-width: 1200px) {
+    table#myFareCardList thead th:nth-of-type(3) {
+      min-width: 160px !important; } }
 
 table#myFareCardList thead th:nth-of-type(4) {
   min-width: 120px !important; }
+  @media (min-width: 992px) {
+    table#myFareCardList thead th:nth-of-type(4) {
+      width: auto; } }
 
 .tooltip {
   border: 2px solid #fff; }
