--- a/src/template/scss/_tables.scss
+++ b/src/template/scss/_tables.scss
@@ -10,23 +10,18 @@ table {
   &#myFareCardList {
     thead {
       th {
-        // &:nth-of-type(1) {
-        //   width: auto !important;
-        //   min-width: 128px !important;
-        //   //width: 128px !important;
-        // }
-        // &:nth-of-type(2) {
-        //   min-width: 120px !important;
-        // }
         &:nth-of-type(3) {
           min-width: 120px !important;
+          @include media-breakpoint-up(xl) {
+            min-width: 160px !important;
+          }
         }
         &:nth-of-type(4) {
           min-width: 120px !important;
+          @include media-breakpoint-up(lg) {
+            width: auto;
+          }
         }
-        // &:nth-of-type(5) {
-        //   min-width: 150px !important;
-        // }
       }
     }
   }
