--- a/src/template/css/app.css
+++ b/src/template/css/app.css
@@ -7677,10 +7677,11 @@ hr {
 
 .section {
   padding-top: 30px;
-  padding-bottom: 60px; }
+  padding-bottom: 30px; }
   @media (min-width: 992px) {
     .section {
-      padding-top: 60px; } }
+      padding-top: 60px;
+      padding-bottom: 60px; } }
   .section:nth-child(odd) {
     background-color: #f5f5f4; }
 
@@ -8451,17 +8452,15 @@ input[name="quantity"]::placeholder {
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label:after {
   top: 2px; }
 
-table#myFareCardList thead th:nth-of-type(3) {
-  min-width: 120px !important; }
-  @media (min-width: 1200px) {
-    table#myFareCardList thead th:nth-of-type(3) {
-      min-width: 160px !important; } }
-
-table#myFareCardList thead th:nth-of-type(4) {
-  min-width: 120px !important; }
-  @media (min-width: 992px) {
-    table#myFareCardList thead th:nth-of-type(4) {
-      width: auto; } }
+table#myFareCardList {
+  position: relative; }
+  table#myFareCardList tbody td {
+    white-space: nowrap; }
+    table#myFareCardList tbody td:nth-of-type(3) select, table#myFareCardList tbody td:nth-of-type(4) select {
+      min-width: 155px !important; }
+      @media (min-width: 992px) {
+        table#myFareCardList tbody td:nth-of-type(3) select, table#myFareCardList tbody td:nth-of-type(4) select {
+          width: auto; } }
 
 .tooltip {
   border: 2px solid #fff; }
