--- a/src/template/scss/_tables.scss
+++ b/src/template/scss/_tables.scss
@@ -1,25 +1,35 @@
 table {
-  &.table-my-fare-card-list {
-    thead {
-      .th-lg {
-        //min-width: 12rem;
-      }
-    }
-  }
-
   &#myFareCardList {
+    position: relative;
     thead {
       th {
-        &:nth-of-type(3) {
-          min-width: 120px !important;
-          @include media-breakpoint-up(xl) {
-            min-width: 160px !important;
-          }
-        }
+        // &:nth-of-type(3) {
+        //   min-width: 155px !important;
+        //   @include media-breakpoint-up(xl) {
+        //     min-width: 160px !important;
+        //   }
+        // }
+        // &:nth-of-type(4) {
+        //   min-width: 155px !important;
+        //   @include media-breakpoint-up(lg) {
+        //     width: auto;
+        //   }
+        // }
+      }
+    }
+
+    tbody {
+      td {
+        white-space: nowrap;
+
+        &:nth-of-type(3),
         &:nth-of-type(4) {
-          min-width: 120px !important;
-          @include media-breakpoint-up(lg) {
-            width: auto;
+          select {
+            min-width: 155px !important;
+
+            @include media-breakpoint-up(lg) {
+              width: auto;
+            }
           }
         }
       }
