Added Babel for IE11 support. Restructured gulpfile.js and moved vendor js into js/vendor directoryt. Updates paths, removed unused packages and plugins.

--- a/src/template/scss/_header.scss
+++ b/src/template/scss/_header.scss
@@ -37,7 +37,13 @@
           }
 
           &:hover,
-          &:focus,
+          &:focus {
+            @include media-breakpoint-up(xl) {
+              color: $white;
+              background-color: $cyan;
+            }
+          }
+
           &:focus-within {
             @include media-breakpoint-up(xl) {
               color: $white;
