Added floating labels. Cleaned up markup, addressed some ADA issues.

--- a/src/template/scss/_components.scss
+++ b/src/template/scss/_components.scss
@@ -4,5 +4,7 @@
 @import "cards";
 @import "card-deck";
 @import "forms";
+@import "bs-floating-labels";
+@import "input-groups";
 @import "tables";
 @import "tooltips";
