--- a/src/template/scss/_forms.scss
+++ b/src/template/scss/_forms.scss
@@ -1,172 +1,249 @@
 /**********************************************
     Form styles
 **********************************************/
-.form-row {
-  margin-top: 30px;
+fieldset {
+    width: 100%;
 
-  @include media-breakpoint-up(lg) {
-    margin-top: 45px;
-  }
-}
-.form-group {
-  margin-bottom: 15px;
-
-  @include media-breakpoint-up(lg) {
-    margin-bottom: 30px;
-  }
-}
-.form-control,
-.form-control-lg,
-.custom-select {
-  @include font-size(16);
-
-  @include media-breakpoint-up(lg) {
-    @include font-size(23);
-  }
-}
-
-.input-group {
-  .form-control {
-    border-right: none;
-  }
-  .input-group-text {
-    background-color: $white;
-    border-left: none;
-  }
-
-  &.is-invalid {
-    .input-group-text {
-      border: 1px solid $red;
-      border-left: none;
+    legend {
+        font-weight: 700;
     }
-  }
 }
+
+.form-row {
+    margin-top: 30px;
+
+    @include media-breakpoint-up(lg) {
+        margin-top: 45px;
+    }
+}
+.form-group,
+.input-group {
+    margin-bottom: 1rem;
+    width: 98%; // We set to 98% to accomodate the required symbol.
+
+    &.required,
+    &.required-custom {
+        position: relative;
+
+        &::after {
+            content: "*";
+            position: absolute;
+            top: 0;
+            right: -1rem;
+            @include font-size(43);
+            color: $red;
+            line-height: 1;
+
+            @include media-breakpoint-up(lg) {
+                @include font-size(47);
+            }
+        }
+    }
+
+    .form-control,
+    .custom-select {
+        display: block;
+        height: 45px;
+        color: $gray-300;
+        @include font-size(18);
+        padding: 0.375rem 0.75rem;
+
+        @include media-breakpoint-up(lg) {
+            height: 50px;
+            @include font-size(23);
+        }
+    }
+
+    .custom-select {
+        padding-left: 1.25rem;
+    }
+
+    label {
+        color: $gray-300;
+    }
+
+    textarea {
+        width: 100%;
+        height: auto;
+    }
+
+    // .custom-file,
+    // input[type='file'] {
+    // 	height: 40px;
+
+    // 	@include media-breakpoint-up(lg) {
+    // 		height: 50px;
+    // 	}
+
+    // 	.custom-file-label {}
+    // }
+
+    .input-group-text {
+        background-color: $white;
+        border-left: none;
+    }
+
+    &.is-invalid {
+        .input-group-text {
+            border: 1px solid $red;
+            border-left: none;
+        }
+    }
+}
+
+// .form-control,
+// .custom-select {
+//     @include font-size(16);
+
+//     @include media-breakpoint-up(lg) {
+//         @include font-size(23);
+//     }
+// }
+
+// .input-group {
+//     .form-control {
+//         border-right: none;
+//     }
+//     .input-group-text {
+//         background-color: $white;
+//         border-left: none;
+//     }
+
+//     &.is-invalid {
+//         .input-group-text {
+//             border: 1px solid $red;
+//             border-left: none;
+//         }
+//     }
+// }
 
 .form-control:disabled,
 .form-control[readonly] {
-  background-color: $white;
+    background-color: $white;
 }
 
-.site-search-box {
-  background: $gray-100;
-  position: absolute;
-  top: 67px;
-  right: 0;
-  width: 420px;
-  padding: 1rem;
-  display: none;
-  z-index: 3;
+// .site-search-box {
+//     background: $gray-100;
+//     position: absolute;
+//     top: 67px;
+//     right: 0;
+//     width: 420px;
+//     padding: 1rem;
+//     display: none;
+//     z-index: 3;
 
-  .form-control {
-    color: $gray-600;
-    @include font-size(18);
-  }
+//     .form-control {
+//         color: $gray-600;
+//         @include font-size(18);
+//     }
 
-  .input-group-append {
-    background-color: #fff;
+//     .input-group-append {
+//         background-color: #fff;
 
-    .btn-primary {
-      background-color: $white;
-      border: 1px solid $border-color;
-      border-left: 0;
-      @include font-size(18);
-    }
-  }
-}
+//         .btn-primary {
+//             background-color: $white;
+//             border: 1px solid $border-color;
+//             border-left: 0;
+//             @include font-size(18);
+//         }
+//     }
+// }
 
 button[type="search"] {
-  .icon {
-    @include media-breakpoint-up(md) {
-      width: 24px !important;
-      height: 24px !important;
+    .icon {
+        @include media-breakpoint-up(md) {
+            width: 24px !important;
+            height: 24px !important;
+        }
     }
-  }
 }
 
 // Required form elements styles
 /* Denote label at top of forms */
 .denote-required {
-  position: relative;
-  @include font-size(18);
-
-  @include media-breakpoint-up(lg) {
-    @include font-size(23);
-  }
-
-  .required-symbol {
-    @include font-size(43);
-    position: absolute;
-    top: -0.5rem;
-    left: -1.25rem;
-    color: $red;
+    position: relative;
+    @include font-size(18);
+    margin-left: 1.25rem;
 
     @include media-breakpoint-up(lg) {
-      @include font-size(47);
-      line-height: 0;
-      margin-right: 0.25rem;
-      top: 1.7rem;
+        @include font-size(23);
+        margin-left: 1.4375rem;
     }
-  }
+
+    .required-symbol {
+        @include font-size(43);
+        position: absolute;
+        top: -0.5rem;
+        left: -1.25rem;
+        color: $red;
+
+        @include media-breakpoint-up(lg) {
+            @include font-size(47);
+            line-height: 0;
+            margin-right: 0.25rem;
+            top: 1.7rem;
+        }
+    }
 }
 
 // Billing
-.billing-info,
-.payment-info,
+// .billing-info,
+// .payment-info,
+// .shipping-info {
+//   .form-group,
+//   .input-group {
+//     width: 327px;
+//     @include media-breakpoint-up(lg) {
+//       width: 445px;
+//     }
+//     @include media-breakpoint-up(xl) {
+//       width: 535px;
+//     }
+
+//     &.required {
+//       position: relative;
+
+//       &::after {
+//         content: "*";
+//         position: absolute;
+//         top: 0;
+//         right: -1rem;
+//         @include font-size(43);
+//         color: $red;
+//         line-height: 1;
+
+//         @include media-breakpoint-up(lg) {
+//           @include font-size(47);
+//         }
+//       }
+//     }
+
+//     &.required-custom {
+//       &::after {
+//         content: "*";
+//         position: absolute;
+//         top: 0;
+//         right: -1rem;
+//         @include font-size(43);
+//         color: $red;
+//         line-height: 1;
+
+//         @include media-breakpoint-up(lg) {
+//           @include font-size(47);
+//         }
+//       }
+//     }
+//   }
+// }
+
 .shipping-info {
-  .form-group,
-  .input-group {
-    width: 327px;
-    @include media-breakpoint-up(lg) {
-      width: 445px;
-    }
-    @include media-breakpoint-up(xl) {
-      width: 535px;
-    }
-
-    &.required {
-      position: relative;
-
-      &::after {
-        content: "*";
-        position: absolute;
-        top: 0;
-        right: -1rem;
-        @include font-size(43);
-        color: $red;
-        line-height: 1;
-
-        @include media-breakpoint-up(lg) {
-          @include font-size(47);
-        }
-      }
-    }
-
-    &.required-custom {
-      &::after {
-        content: "*";
-        position: absolute;
-        top: 0;
-        right: -1rem;
-        @include font-size(43);
-        color: $red;
-        line-height: 1;
-
-        @include media-breakpoint-up(lg) {
-          @include font-size(47);
-        }
-      }
-    }
-  }
-}
-
-.shipping-info {
-  display: none;
+    display: none;
 }
 
 input[name="quantity"]::placeholder {
-  text-align: center;
+    text-align: center;
 }
 
-.custom-checkbox .custom-control-input:checked ~ .custom-control-label:after {
-  top: 2px;
-}
+// .custom-checkbox .custom-control-input:checked ~ .custom-control-label:after {
+//     top: 2px;
+// }
